Adding in the beginning of tags and talk levels

--- a/source/_talks/continuous-integration-stop-procrastinating-and-build-often.html
+++ b/source/_talks/continuous-integration-stop-procrastinating-and-build-often.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: Continuous Integration: Stop Procrastinating and Build Often!
+level: Intermediate
 speakerlastname: Mizer
 use: [talks, speakers]
 ---
