--- a/source/_talks/demilitarizing-http-developing-apis-for-hostile-mobile-developers.html
+++ b/source/_talks/demilitarizing-http-developing-apis-for-hostile-mobile-developers.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: Demilitarizing HTTP -- Developing APIs for Hostile Mobile Developers
+level: Intermediate
 speakerlastname: Vandervelde
 use: [talks, speakers]
 ---
