--- a/source/_talks/developing-and-deploying-php-with-docker.html
+++ b/source/_talks/developing-and-deploying-php-with-docker.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: Developing and Deploying PHP with Docker
+level: Intermediate
 speakerlastname: Mizer
 use: [talks, speakers]
 ---
