--- a/source/_talks/getting-off-of-the-freelance-roller-coaster.html
+++ b/source/_talks/getting-off-of-the-freelance-roller-coaster.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: Getting off the Freelance Roller-Coaster
+level: Beginner
 speakerlastname: Willroth
 use: [talks, speakers]
 ---
