--- a/source/_talks/give-it-back-getting-involoved-in-open-source.html
+++ b/source/_talks/give-it-back-getting-involoved-in-open-source.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: Give it Back - Getting Involved in Open Source
+level: Beginner
 speakerlastname: Smith
 use: [talks, speakers]
 ---
