--- a/source/_talks/mentoring-change-the-world-one-hour-at-a-time.html
+++ b/source/_talks/mentoring-change-the-world-one-hour-at-a-time.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: Mentoring: Change the World One Hour at a Time
+level: Beginner
 speakerlastname: Tucker Long
 use: [talks, speakers]
 ---
