--- a/source/_talks/practical-deployments-for-average-projects.html
+++ b/source/_talks/practical-deployments-for-average-projects.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: Practical Deployments for Average Projects
+level: Intermediate
 speakerlastname: Reinink
 use: [talks, speakers]
 ---
