--- a/source/_talks/project-triage-what-to-do-when-everything-hits-the-fan.html
+++ b/source/_talks/project-triage-what-to-do-when-everything-hits-the-fan.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: Project Triage: What to Do When Everything Hits the Fan
+level: Intermediate
 speakerlastname: O'Neil
 use: [talks, speakers]
 ---
