--- a/source/_talks/service-oriented-architecture-its-time-to-play-nice-with-others.html
+++ b/source/_talks/service-oriented-architecture-its-time-to-play-nice-with-others.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: Service Oriented Architecture: It's Time to Play Nice With Others!
+level: Intermediate
 speakerlastname: Willbanks
 use: [talks, speakers]
 ---
