--- a/source/_talks/speak-http-and-consume-apis-with-guzzle.html
+++ b/source/_talks/speak-http-and-consume-apis-with-guzzle.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: Speak HTTP and Consume APIs With Guzzle
+level: Intermediate
 speakerlastname: Lindblom
 use: [talks, speakers]
 ---
