--- a/source/_talks/wordpress-as-an-application-framework.html
+++ b/source/_talks/wordpress-as-an-application-framework.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: WordPress as an Application Framework
+level: Intermediate
 speakerlastname: Filippini
 use: [talks, speakers]
 ---
