--- a/source/_talks/you-can-ux-too-avoid-the-programmers-interface.html
+++ b/source/_talks/you-can-ux-too-avoid-the-programmers-interface.html
@@ -1,6 +1,7 @@
 ---
 layout: talk
 title: You Can UX Too: Avoiding the Programmer's Interface
+level: Beginner
 speakerlastname: O'Neil
 use: [talks, speakers]
 ---
