Minor tweaks to speaker information for Beau Simensen.

--- a/source/_speakers/beau-simensen.html
+++ b/source/_speakers/beau-simensen.html
@@ -8,10 +8,9 @@ use: [speakers, talks]
 title: Beau Simensen
 ---
 <p>Beau Simensen (<a href="http://twitter.com/beausimensen" target="_blank">@beausimensen</a>,
-    <a href="http://beau.io" target="_blank">beau.io</a>) has been a professional polyglot programmer since 1998. He
-    owns Dragonfly Development (<a href="http://dflydev.com" target="_blank">dflydev.com</a>), a consulting company, and
-    is Co-founder and Chief Software Architect for REFLX Labs, a wearables startup out of Seattle. An active
-    open-sourcer, he created Sculpin (<a href="http://sculpin.io" target="_blank">sculpin.io</a>) and helped create
-    Stack PHP (<a href="http://stackphp.com" target="_blank">stackphp.com</a>). He is also the Sculpin
-    representative to the PHP Framework Interoperability Group (PHP-FIG). Beau is a proponent of framework agnostic
-    code. Unglue all the things!</p>
+    <a href="https://beau.io" target="_blank">beau.io</a>) has been a professional polyglot programmer since 1998. He
+    owns dflydev (<a href="http://dflydev.com" target="_blank">dflydev.com</a>), a consulting company, and is co-host
+    of That Podcast (<a href="http://thatpodcast.io" target="_blank">thatpodcast.io</a>). An active open-sourcer, he
+    created Sculpin (<a href="http://sculpin.io" target="_blank">sculpin.io</a>) and helped create Stack PHP
+    (<a href="http://stackphp.com" target="_blank">stackphp.com</a>). He is also the Sculpin representative to the PHP
+    Framework Interoperability Group (PHP-FIG). Beau is a proponent of framework agnostic code. Unglue all the things!</p>
